<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:id="@+id/appBarLayout">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapseActionView_music"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:gravity="center|start"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5">

                <ImageView
                    android:id="@+id/iv_top"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/todo"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitStart"
                    android:src="@mipmap/ic_launcher"
                    android:transitionName="@string/my" />


                <TextView
                    android:id="@+id/tvCoverName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/iv_top"
                    android:textColor="@color/white"
                    android:text="@string/move_name"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvAvaterName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvCoverName"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@+id/iv_top"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/move_avater"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/iv_top"
                    android:layout_below="@+id/tvAvaterName"
                    android:text="@string/description_text"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:lines="5"
                    android:ellipsize="end"
                    android:id="@+id/tvDescription"/>

            </RelativeLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/music_list_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:elevation="4dp"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin"
                tools:ignore="MissingConstraints" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/music_list_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>